# iam-credential-rotatation

./: .gitignore  Pipfile  README.md  op.env  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
src/: _version.py  constants.py  iam_credential_rotation.py  provider_aws.py  test_iam_credential_rotation.py  test_provider_aws.py  test_utils.py  utils.py
